correct obscure symbol bit in email addresses

--- a/vtunsite/team.html
+++ b/vtunsite/team.html
@@ -37,7 +37,7 @@
 		  <font face="Verdana">
 		    <ul>
 		      <li>
-			<a href="mailto:max_mk#64;yahoo.com">Maxim Krasnyansky</a>
+			<a href="mailto:max_mk&#64;yahoo.com">Maxim Krasnyansky</a>
 		      </li>
 		    </ul>
 		  </font>
@@ -61,159 +61,159 @@
 		  <p align="justify">
 		    <ul>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:gayaneh#64;yahoo.com> Gayaneh Krasnyanskaya(Max's wife:)))  </a> <br/>
+			<a href=mailto:gayaneh&#64;yahoo.com> Gayaneh Krasnyanskaya(Max's wife:)))  </a> <br/>
 			Initial Web site creation. And a lot of other help :)))   <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:alex#64;uznet.net> Alex Korenkov  </a> <br/>
+			<a href=mailto:alex&#64;uznet.net> Alex Korenkov  </a> <br/>
 			Testing, bug reports. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:shukhrat#64;ishonch.uz> Shukhrat Zakhidov  </a> <br/>
+			<a href=mailto:shukhrat&#64;ishonch.uz> Shukhrat Zakhidov  </a> <br/>
 			Testing, bug reports, suggestions. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:dag#64;mind.be> Dag Wieers  </a> <br/>
+			<a href=mailto:dag&#64;mind.be> Dag Wieers  </a> <br/>
 			RPM packager specification file. RedHat startup script.  <br/>
 			Several bug reports. SOCKS support suggestions. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:ted#64;acacia.datacomm.com> Ted Rolle  </a> <br/>
+			<a href=mailto:ted&#64;acacia.datacomm.com> Ted Rolle  </a> <br/>
 			Spelling fixes. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:cas#64;taz.net.au> Craig Sanders  </a> <br/>
+			<a href=mailto:cas&#64;taz.net.au> Craig Sanders  </a> <br/>
 			Debian startup script. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:catalin#64;ccp.pub.ro> Catalin Ciocoiu  </a> <br/>
+			<a href=mailto:catalin&#64;ccp.pub.ro> Catalin Ciocoiu  </a> <br/>
 			Reported compilation problems.  <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:tid#64;podolsk.ru> Timur Danyarhojaev  </a> <br/>
+			<a href=mailto:tid&#64;podolsk.ru> Timur Danyarhojaev  </a> <br/>
 			Added client source address option. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:aka#64;gams.at> Andreas Kainz  </a> <br/>
+			<a href=mailto:aka&#64;gams.at> Andreas Kainz  </a> <br/>
 			RPM package improvements. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:christ#64;insynq.com> Chris Todd  </a> <br/>
+			<a href=mailto:christ&#64;insynq.com> Chris Todd  </a> <br/>
 			Idea of challenge based authentication.  <br/>
 			Initial BlowFish encryption code.  <br/>
 			Suggestions. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:garet#64;satix.net> Garet Krampe  </a> <br/>
+			<a href=mailto:garet&#64;satix.net> Garet Krampe  </a> <br/>
 			A lot of great ideas. Mailing list. <br/>
 			Web site mirror. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:denis#64;granch.com.my> Denis Zapolsky  </a> <br/>
+			<a href=mailto:denis&#64;granch.com.my> Denis Zapolsky  </a> <br/>
 			Testing.  <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:lord#64;crocodile.org> Vadim Zaliva  </a> <br/>
+			<a href=mailto:lord&#64;crocodile.org> Vadim Zaliva  </a> <br/>
 			Solaris patches.  Suggestions. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:floyd#64;hurricanes.org> Hurricane Floyd  </a> <br/>
+			<a href=mailto:floyd&#64;hurricanes.org> Hurricane Floyd  </a> <br/>
 			I had several vacations. <br/>
 			:))))))))))))))))))) <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:macleajb#64;Trademart-1.EDnet.NS.CA> James B. MacLean  </a> <br/>
+			<a href=mailto:macleajb&#64;Trademart-1.EDnet.NS.CA> James B. MacLean  </a> <br/>
 			Client persist mode fix. Suggestions. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:xerox#64;httpd.net> Paul  </a> <br/>
+			<a href=mailto:xerox&#64;httpd.net> Paul  </a> <br/>
 			Stress tests, bug reports, suggestions. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:m_evmenkin#64;yahoo.com> Maksim Yevenkin  </a> <br/>
+			<a href=mailto:m_evmenkin&#64;yahoo.com> Maksim Yevenkin  </a> <br/>
 			TAP driver for FreeBSD. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:anthon#64;ws.co.za> Anthon Walters  </a> <br/>
+			<a href=mailto:anthon&#64;ws.co.za> Anthon Walters  </a> <br/>
 			Web site mirror. Testing. Initial FAQ. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:ryand#64;mobiletel.com> Ryan Defelice  </a> <br/>
+			<a href=mailto:ryand&#64;mobiletel.com> Ryan Defelice  </a> <br/>
 			OpenBSD package maintainer. Provided OpenBSD server for  <br/>
 			development and testing <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:leo#64;strike.wu-wien.ac.at> Alexander Bergolth  </a> <br/>
+			<a href=mailto:leo&#64;strike.wu-wien.ac.at> Alexander Bergolth  </a> <br/>
 			Initial multiple connection handling and host lock functionalities. <br/>
 			Improvements and fixes of source address option. Incorrect error  <br/>
 			handling fix. Ideas. Suggestions. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:feyrer#64;rfhs8012.fh-regensburg.de> Hubert Feyrer  </a> <br/>
+			<a href=mailto:feyrer&#64;rfhs8012.fh-regensburg.de> Hubert Feyrer  </a> <br/>
 			NetBSD package. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:tamaru#64;ap.t.u-tokyo.ac.jp> Hiroharu Tamaru  </a> <br/>
+			<a href=mailto:tamaru&#64;ap.t.u-tokyo.ac.jp> Hiroharu Tamaru  </a> <br/>
 			Updated FreeBSD 4.0 TUN driver support.  <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:tsd#64;geo-mis.com> Terry Donaldson  </a> <br/>
+			<a href=mailto:tsd&#64;geo-mis.com> Terry Donaldson  </a> <br/>
 			Provided Solaris 8.0 server for development and testing. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:underley#64;underley.eu.org> Daniel Podlejski  </a> <br/>
+			<a href=mailto:underley&#64;underley.eu.org> Daniel Podlejski  </a> <br/>
 			TUN/TAP driver modifications for 2.3.99-pre5 kernel. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:mjt#64;tls.msk.ru> Michael Tokarev  </a> <br/>
+			<a href=mailto:mjt&#64;tls.msk.ru> Michael Tokarev  </a> <br/>
 			File descriptors and memory leaks fix.  <br/>
 			Tons of other bug fixes and patches. Suggestions. Ideas. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:xavier#64;bru-noc.net> Xavier  </a> <br/>
+			<a href=mailto:xavier&#64;bru-noc.net> Xavier  </a> <br/>
 			European web site mirror. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:chris#64;bikeworld.com> Chris Snell  </a> <br/>
+			<a href=mailto:chris&#64;bikeworld.com> Chris Snell  </a> <br/>
 			Mailing list archives. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:talby#64;trap.mtview.ca.us> Robert Stone  </a> <br/>
+			<a href=mailto:talby&#64;trap.mtview.ca.us> Robert Stone  </a> <br/>
 			Security enhancements. Suggestions. Ideas. <br/>
 			Encryption and other subsystems rework for 3.X. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:sgunderson#64;bigfoot.com> Steinar H. Gunderson  </a> <br/>
+			<a href=mailto:sgunderson&#64;bigfoot.com> Steinar H. Gunderson  </a> <br/>
 			Tons of stability fixes and problem reports.  <br/>
 			Ideas and suggestions. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:yan#64;cardinalengineering.com> Yan Seiner  </a> <br/>
+			<a href=mailto:yan&#64;cardinalengineering.com> Yan Seiner  </a> <br/>
 			Testing. Bug reports. Suggestions. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:jim#64;funnybee.ntlp.com> James Yonan  </a> <br/>
+			<a href=mailto:jim&#64;funnybee.ntlp.com> James Yonan  </a> <br/>
 			Encryption and other fixes. Suggestions. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:noop#64;nwonknu.org> Greg Olszewski  </a> <br/>
+			<a href=mailto:noop&#64;nwonknu.org> Greg Olszewski  </a> <br/>
 			Config parser and other fixes. Suggestions. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:kevin#64;labsysgrp.com> Kevin P. Fleming  </a> <br/>
+			<a href=mailto:kevin&#64;labsysgrp.com> Kevin P. Fleming  </a> <br/>
 			Makefile and config parser enhancement. <br/>
 			Other minor fixes and suggestions. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:rrw#64;hell.pl> Robert R. Wal </a> <br/>
+			<a href=mailto:rrw&#64;hell.pl> Robert R. Wal </a> <br/>
 			Added support for iproute command. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:willems.luc#64;pandora.be> Willems Luc  </a> <br/>
+			<a href=mailto:willems.luc&#64;pandora.be> Willems Luc  </a> <br/>
 			Initial SuSE packaging.  Testing. <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:dpf-vtun#64;fountainbay.com> Dale Fountain </a> <br/>
+			<a href=mailto:dpf-vtun&#64;fountainbay.com> Dale Fountain </a> <br/>
 			Added multiple cipher support. <br/>
 			Added multiple cipher modes support. <br/>
 			Added support for different sized keys. <br/>
@@ -221,12 +221,12 @@
 			Fixed Bug#908824 (persist=keep not re-applying routes) <br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:bishop#64;platypus.bc.ca> Bishop Clark </a> <br/>
+			<a href=mailto:bishop&#64;platypus.bc.ca> Bishop Clark </a> <br/>
 			Project Management 2003-2005<br/>
 			Light Development<br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
-			<a href=mailto:macfx#64;tiscali.nl> Mick Young </a> <br/>
+			<a href=mailto:macfx&#64;tiscali.nl> Mick Young </a> <br/>
 			Project Management 2005-
 			Helping Bishop focus on rest and development!
 		      </font></li>
@@ -253,10 +253,10 @@
 		  <font face="Verdana">
 		    <ul>
 		      <li>
-			<a href="mailto:vtun-users#64;lists.sf.net">Mailing list</a>
+			<a href="mailto:vtun-users&#64;lists.sf.net">Mailing list</a>
 		      </li>
 		      <li>
-			<a href="mailto:bishop#64;platypus.bc.ca">Maintainer</a>
+			<a href="mailto:bishop&#64;platypus.bc.ca">Maintainer</a>
 		      </li>
 		    </ul>
 		  </font>
