--- a/vtunsite/faq.html
+++ b/vtunsite/faq.html
@@ -199,10 +199,17 @@ VTun - Frequently Asked Questions
 <br> 
 <a name="1.20"> 1.20 Who has developed so nice and cool software ? </a><br> 
 &nbsp;Thanks :). You can find list of VTun team members on the web site or<br> 
-&nbsp;in the 'Credits' file in VTun package.&nbsp;&nbsp;<br> 
+&nbsp;in the 'Credits' file in VTun package.<br> 
 <br> 
-<a name="1.21"> 1.21 I don't like VTun.  Where can I send complains ? </a><br> 
+<a name="1.21"> 1.21 I don't like VTun.  Where can I send complaints ? </a><br> 
 &nbsp;You can send them to /dev/null. <br> 
+<br>
+&nbsp;Seriously, complaints are merely badly-worded criticism which people<br>
+&nbsp;won't discuss further.  We welcome criticism and suggestions, of<br>
+&nbsp;course, as long as we can discuss it.  If you just want to spout, it's<br>
+&nbsp;not going to do anyone any good, and you may as well just send it to<br>
+&nbsp;/dev/null.  We're sorry to hear you <i>just don't like it</i>; even more <br>
+&nbsp;sorry to hear you don't want to help improve it for everyone else.<br>
 <br> 
 <a name="1.22"> 1.22 Where can I get more information about VTun ? </a><br> 
 &nbsp;VTun package contains: <br> 
@@ -275,7 +282,6 @@ VTun - Frequently Asked Questions
 &nbsp;any other system.  We're advising people not to worry, but<br>
 &nbsp;definitely appreciate discussion on this topic that can result<br>
 &nbsp;in a fix that removes the warning.<br>
-
 
 <br> 
 <b>3. Crypto Questions</b><br> 
