--- a/vtunsite/faq.html
+++ b/vtunsite/faq.html
@@ -194,10 +194,10 @@ VTun - Frequently Asked Questions
 &nbsp;VTun uses Challenge Based Authentication and doesn't transfer passwords <br> 
 &nbsp;in clear text. Encryption module uses MD5 for 128 bits key generation <br> 
 &nbsp;and BlowFish algorithm for actual data encryption.<br> 
-&nbsp;There could be some weaknesses in key generation method, we will try <br> 
+&nbsp;There could be some weaknesses in key generation method; we will try <br> 
 &nbsp;to address them in future releases. <br> 
 <br> 
-<a name="1.20"> 1.20 Who has developed so nice and cool software ? </a><br> 
+<a name="1.20"> 1.20 Who has developed such nice and cool software ? </a><br> 
 &nbsp;Thanks :). You can find list of VTun team members on the web site or<br> 
 &nbsp;in the 'Credits' file in VTun package.<br> 
 <br> 
