- correct cvs browse URL  - remove two stale mirrors.

--- a/vtunsite/index.html
+++ b/vtunsite/index.html
@@ -123,7 +123,7 @@
 			  <a href="download.html">Download</a>
 			</li>
 			<li>
-			  <a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/vtun/">CVS tree</a>
+			  <a href="http://vtun.cvs.sourceforge.net/vtun/">CVS tree</a>
 			</li>
 			<li>
 			  <a href="team.html">Team</a>
@@ -161,12 +161,6 @@
 			<li>
 			  <font face="Verdana" color="#000000">Web site mirrors</font>
 			  <dl>
-			    <a href="http://vtun.saol.com">Saol.com (South Africa)</a>
-			  </dl>
-			  <dl>
-			    <a href="http://vtun.geo-mis.com">Geo-Mis.com (USA)</a>
-			  </dl>
-			  <dl>
 			    <a href="http://mirror.blackroute.net/vtun">Blackroute.net (USA)</a>
 			  </dl>
 			  <dl>
@@ -191,7 +185,7 @@
 	height="31" width="88" /></a>
 	<br/><br/> 
 	<font face="Verdana"> 
-	  Copyright (C) 1999-2005 Maxim Krasnyansky<br/>
+	  Copyright (C) 1999-2006 Maxim Krasnyansky<br/>
 	</font>
 	<font size=-3><a href="http://sourceforge.net/sendmessage.php?touser=10830">corrections?</a></font>   
       </center>
