added a link to 3.2 in the TOC

--- a/vtunsite/faq.html
+++ b/vtunsite/faq.html
@@ -84,6 +84,7 @@ VTun - Frequently Asked Questions
 <b>3. Crypto Questions</b> 
 <ul> 
 <dl><a href="#3.1"> 3.1 Isn't using only XOR to encrypt challenges completely unsafe ? </a></dl>
+<dl><a href="#3.2"> 3.2 I have this problem with a binary built wihout SSL ... </a></dl>
 </ul> 
 <br> 
 <b>1. General Questions</b><br> 
@@ -345,10 +346,11 @@ VTun - Frequently Asked Questions
 	</td>
 	</tr>
    </table>
-   <br><br>
+   	<br/><br/>
    <font face="Verdana"> 
-      Copyright (C) 1999-2004 Maxim Krasnyansky
+	  Copyright (C) 1999-2006 Maxim Krasnyansky<br/>
    </font>
-</center>
-</body>
-</html>
+	<font size=-3><a href="http://sourceforge.net/sendmessage.php?touser=10830">corrections?</a></font>   
+      </center>
+    </body>
+  </html>
