--- a/vtunsite/download.html
+++ b/vtunsite/download.html
@@ -1,182 +1,184 @@
 <html>
 
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<meta name="Author" content="Maxim Krasnyansky">
-<meta name="Keywords" content="vpn, ip, ppp, slip, ethernet, virtual, tunnel, vtun, vtund, network, Maxim, Krasnyansky, Maksim, Krasnyanskiy">
-<meta name="Description" content="The easiest way to create Virtual Tunnels over TCP/IP network">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
+    <meta name="Author" content="Maxim Krasnyansky"/>
+    <meta name="Keywords" content="vpn, ip, ppp, slip, ethernet, virtual, tunnel, vtun, vtund, network, Maxim, Krasnyansky, Maksim, Krasnyanskiy"/>
+    <meta name="Description" content="The easiest way to create Virtual Tunnels over TCP/IP networks"/>
 
-<title>
-   Download VTun 
-</title>
-</head>
+    <title>
+      Download VTun 
+    </title>
+  </head>
 
-<body bgcolor="#FFFFFF" vlink="#446DC4" link="#000000" text="#446DC4">
+  <body bgcolor="#FFFFFF" vlink="#446DC4" link="#000000" text="#446DC4">
 
-<center>
-   <br>
-   <img src="vtun_s.gif" width="336" height="71" alt="* VTun *">
-   <br>
-   <font face="Verdana"><b>
-      Download
-   </b></font>
-   <p>
-   <table border="0" cellpadding="0" cellspacing="0" width="95%">
-       <tr>
-       <td align="center" valign="top" width="50%" rowspan="2">
-	   <table border="1" cellpadding="0" cellspacing="0" width="98%">
-              <tr>
-                 <td align="center" valign="top" bgcolor="#446DC4">
-		    <font color="#FFFFFF" face="Verdana">
-		    <b>Stable (2.6)</b>
-		    </font>
-	 	 </td>
-              </tr>
-              <tr>
-                 <td bgcolor="#E7E7E7">
-		    <font face="Verdana">
- 		    <ul>
-                      <li>
+    <center>
+      <br/>
+      <img src="vtun_s.gif" width="336" height="71" alt="* VTun *"/>
+      <br/>
+      <font face="Verdana"><b>
+	Download
+      </b></font>
+      <br/>
+
+      <table border="0" cellpadding="0" cellspacing="0" width="95%">
+	<tr>
+	  <td align="center" valign="top" width="50%" rowspan="2">
+	    
+	    <table border="1" cellpadding="0" cellspacing="0" width="98%">
+	      <tr>
+		<td align="center" valign="top" bgcolor="#446DC4">
+		  <font color="#FFFFFF" face="Verdana">
+		    <b>Stable</b>
+		  </font>
+		</td>
+	      </tr>
+	      <tr>
+		<td bgcolor="#E7E7E7">
+		  <font face="Verdana">
+		    <ul>
+		      <li>
 			<font face="Verdana" color="#000000">Source</font>
 			<dl>
-			   <a href="http://prdownloads.sourceforge.net/vtun/vtun-2.6.tar.gz">vtun-2.6.tar.gz</a>
+			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.0.tar.gz">vtun-3.0.0.tar.gz</a>
 			</dl>
-   		      </li>
-		      <p>
-                      <li>
+		      </li>
+		      <br/>
+		      <li>
 			<font face="Verdana" color="#000000">Linux RPM packages</font>
 			<dl>
-			   <a href="http://prdownloads.sourceforge.net/vtun/vtun-2.6-1.col31.i386.rpm">Vtun 2.6 for Caldera Open Linux 3.1</a><br>
-			   <a href="http://prdownloads.sourceforge.net/vtun/vtun-2.6-1.col311.i386.rpm">Vtun 2.6 for Caldera Open Linux 3.1.1</a><br>
-			   <a href="http://prdownloads.sourceforge.net/vtun/vtun-2.6-1.rh62.i386.rpm">Vtun 2.6 for RedHat 6.2</a><br>
-			   <a href="http://prdownloads.sourceforge.net/vtun/vtun-2.6-1.rh71.i386.rpm">Vtun 2.6 for RedHat 7.1</a><br>
-			   <a href="http://prdownloads.sourceforge.net/vtun/vtun-2.6-1.rh72.i386.rpm">Vtun 2.6 for RedHat 7.2</a><br>
-			   <a href="http://prdownloads.sourceforge.net/vtun/vtun-2.6-1.rh73.i386.rpm">Vtun 2.6 for RedHat 7.3</a><br>
-			   <a href="http://prdownloads.sourceforge.net/vtun/vtun-2.6-1.rh80.i386.rpm">Vtun 2.6 for RedHat 8.0</a><br>
-			   <a href="http://prdownloads.sourceforge.net/vtun/vtun-2.6-1.ul10.i386.rpm">Vtun 2.6 for United Linux 1.0</a><br>
-			   <a href="http://prdownloads.sourceforge.net/vtun/vtun-2.6-1.src.rpm">Vtun 2.6 Source RPM</a><br>
+			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.0-1.centos4.i386.rpm">Vtun 3.0.0 for CentOS 4</a><br/>
+			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.0-1.rh9.i386.rpm">Vtun 3.0.0 for RedHat 9</a><br/>
+			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.0-1.src.rpm">Vtun 3.0.0 Source RPM</a><br/>
 			</dl>
-   		      </li>
-                      <p> 
+		      </li>
+		      <br/>
 		      <li>
-			<font face="Verdana" color="#000000">Linux Debian
-			packages</font>
+			<font face="Verdana" color="#000000">Older packages</font>
 			<dl>
-			   <a href="http://prdownloads.sourceforge.net/vtun/vtun_2.5-1_i386.deb"> vtun_2.5-1_i386.deb
-			   (Debian SID)</a><br>
-			   <a href="vtun_2.5-1.diff.gz">Diff to rebuild for
-			   different arch/dist</a>
+			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-2.6-1.col31.i386.rpm">Vtun 2.6 for Caldera Open Linux 3.1</a><br/>
+			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-2.6-1.col311.i386.rpm">Vtun 2.6 for Caldera Open Linux 3.1.1</a><br/>
+			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-2.6-1.rh62.i386.rpm">Vtun 2.6 for RedHat 6.2</a><br/>
+			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-2.6-1.rh71.i386.rpm">Vtun 2.6 for RedHat 7.1</a><br/>
+			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-2.6-1.rh72.i386.rpm">Vtun 2.6 for RedHat 7.2</a><br/>
+			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-2.6-1.rh73.i386.rpm">Vtun 2.6 for RedHat 7.3</a><br/>
+			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-2.6-1.rh80.i386.rpm">Vtun 2.6 for RedHat 8.0</a><br/>
+			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-2.6-1.ul10.i386.rpm">Vtun 2.6 for United Linux 1.0</a><br/>
+			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-2.6-1.src.rpm">Vtun 2.6 Source RPM</a><br/>
 			</dl>
-   		      </li>
-		      <p>
-                      <li>
+		      </li>
+		      <br/> 
+		      <li>
+			<font face="Verdana" color="#000000">Linux Debian packages</font>
+			<dl>
+			  <a href="http://prdownloads.sourceforge.net/vtun/vtun_2.5-1_i386.deb">vtun_2.5-1_i386.deb (Debian SID)</a><br/>
+			  <a href="vtun_2.5-1.diff.gz">Diff to rebuild for different arch/dist</a>
+			</dl>
+		      </li>
+		      <br/>
+		      <li>
 			<font face="Verdana" color="#000000">FreeBSD packages </font>
 			<dl>
-			   <a href="vtun-2.4b2-fbsd40.i386.tar.gz">----</a>
+			  <a href="vtun-2.4b2-fbsd40.i386.tar.gz">vtun-2.4b2-fbsd40.i386.tar.gz</a>
 			</dl>
 		      </li>
-		      <p>
-                      <li>
+		      <br/>
+		      <li>
 			<font face="Verdana" color="#000000">OpenBSD packages</font>
 			<dl>
-			   <a href="vtun-2.4-obsd.i386.tar.gz">vtun-2.4-obsd.i386.tar.gz</a>
+			  <a href="vtun-2.4-obsd.i386.tar.gz">vtun-2.4-obsd.i386.tar.gz</a>
 			</dl>
 		      </li>
-		      <p>
-                      <li>
+		      <br/>
+		      <li>
 			<font face="Verdana" color="#000000">NetBSD packages</font>
 			<dl>
-			   <a href="vtun-2.4b2-nbsd.i386.tar.gz">----</a>
+			  <a href="vtun-2.4b2-nbsd.i386.tar.gz">----</a>
 			</dl>
 		      </li>
-		      <p>
-                      <li>
+		      <br/>
+		      <li>
 			<font face="Verdana" color="#000000">Solaris packages</font>
 			<dl>
-			   <a href="vtun-2.4-sol26.sparc.gz">vtun-2.4-sol26.sparc.gz</a><br>
-			   <a href="vtun-2.4-sol80.i386.gz">vtun-2.4-sol80.i386.gz</a><br>
+			  <a href="vtun-2.4-sol26.sparc.gz">vtun-2.4-sol26.sparc.gz</a><br/>
+			  <a href="vtun-2.4-sol80.i386.gz">vtun-2.4-sol80.i386.gz</a><br/>
 			</dl>
 		      </li>
-                    </ul>
-		    </font>
-                 </td>
-              </tr>
-           </table>
-        </td>
-        <td align="center" valign="top" width="50%">
-	   <table border="1" cellpadding="0" cellspacing="0" width="98%">
-              <tr>
-                 <td align="center" valign="top" bgcolor="#446DC4">
-		    <font color="#FFFFFF" face="Verdana">
+		    </ul>
+		  </font>
+		</td>
+	      </tr>
+	    </table>
+
+	  </td>
+	  <td align="center" valign="top" width="50%">
+
+	    <table border="1" cellpadding="0" cellspacing="0" width="98%">
+	      <tr>
+		<td align="center" valign="top" bgcolor="#446DC4">
+		  <font color="#FFFFFF" face="Verdana">
 		    <b>Development (3.X)</b>
-		    </font>
-	 	 </td>
-              </tr>
-              <tr>
-                 <td bgcolor="#E7E7E7">
-		    <font face="Verdana">
- 		    <ul>
-                      <li>
-			<font face="Verdana" color="#000000">Source</font>
-			<dl>
-			   <a href="http://prdownloads.sourceforge.net/vtun/vtun-2.9.90.tar.gz">vtun-2.9.90.tar.gz</a>
-			</dl>
-   		      </li>
-		      <p>
-                      <li>
-			<font face="Verdana" color="#000000">Linux RPM packages</font>
-			<dl>
-			   <a href="http://prdownloads.sourceforge.net/vtun/vtun-2.9.90-1.src.rpm">Vtun 2.9.90 Source RPM</a><br>
-			</dl>
-   		      </li>
-                    </ul>
-		    </font>
-	            <br><br><br><br>
-                 </td>
-              </tr>
-           </table>
-       </td>
-       </tr>
+		  </font>
+		</td>
+	      </tr>
+	      <tr>
+		<td bgcolor="#E7E7E7">
+		  <font face="Verdana">
+		  <br/><br/><br/><br/>
 
-       <tr>
-       <td align="center" valign="top" width="50%">
-	   <table border="1" cellpadding="1" cellspacing="0" width="98%">
-              <tr>
-                 <td align="center" valign="top" bgcolor="#446DC4">
-		    <font color="#FFFFFF" face="Verdana">
+		    <center>Nothing at this time.</center>
+
+		  </font>
+		  <br/><br/><br/><br/>
+		</td>
+	      </tr>
+	    </table>
+
+	  </td>
+	</tr>
+	<tr>
+	  <td align="center" valign="top" width="50%">
+
+	    <table border="1" cellpadding="1" cellspacing="0" width="98%">
+	      <tr>
+		<td align="center" valign="top" bgcolor="#446DC4">
+		  <font color="#FFFFFF" face="Verdana">
 		    <b>A Word of Caution</b>
-		    </font>
-	 	 </td>
-              </tr>
-              <tr>
-                 <td bgcolor="#E7E7E7">
-		    <font color="#000000" face="Verdana">
+		  </font>
+		</td>
+	      </tr>
+	      <tr>
+		<td bgcolor="#E7E7E7">
+		  <font color="#000000" face="Verdana">
 
-<p>Please, please try to use the packages on this page.  Do <b>not</b>
-trust third-party packages to work with your system as well as these
-ones do, and do not expect the same level of support.  If your OS
-is not listed, please consider compiling from source before using
-third-party packages, as the level of assistance you may receive could
-be much higher.</p>
+<p>Please, please, try to use the packages offered by the vtun devel
+team.  The devel team and users often don't have the spare time to
+spend trying to re-create a custom environment.  If your OS isn't
+listed, please try a source package, and then the source, before
+trying a 3rd-party package.</p>
+		    
+<p>Yes, you will probably need a tun RPM for these vtun RPMs, and if
+you are packaging a tun-based VPN app, please set a dependency on the
+tun RPM.  Send me (bishop) email if you can't figure out why.</p>
 
-<p>Yes, you will need a tun RPM for these vtun RPMs, and if you are
-packaging a tun-based VPN app, please set a dependency on the tun RPM.
-Please send me (bishop) email if you can't figure out why.</p>
-		    </font>
-	            <br><br><br><br>
-                 </td>
-              </tr>
-           </table>
-        </td>
-      </tr>
-   </table>
-   <br><br>
-   <img SRC="/cgi-bin/count.cgi?df=vtun_download&ft=1&dd=C&srgb=0;0;0&prgb=0;115;198" alt=""> 
-   <br><br>
-   <font face="Verdana"> 
-      Copyright (C) 1999-2003 Maxim Krasnyansky<br>
-   </font>
-   <font size=-3><a href="http://sourceforge.net/sendmessage.php?touser=10830">corrections?</a></font>   
-</center>
-</body>
+		  </font>
+		  <br/><br/><br/><br/>
+		</td>
+	      </tr>
+	    </table>
+
+	  </td>
+	</tr>
+      </table>
+
+      <br/><br/>
+      <img SRC="/cgi-bin/count.cgi?df=vtun_download&ft=1&dd=C&srgb=0;0;0&prgb=0;115;198" alt=""/> 
+      <br/><br/>
+      <font face="Verdana"> 
+	Copyright (C) 1999-2007 Maxim Krasnyansky<br/>
+      </font>
+      <font size=-3><a href="http://sourceforge.net/sendmessage.php?touser=10830">corrections?</a></font>   
+    </center>
+  </body>
 </html>
