--- a/vtunsite/features.html
+++ b/vtunsite/features.html
@@ -256,7 +256,7 @@
                       <li>
 		    	<font face="Verdana" color="#000000">
 		 	Solaris.<br>
-			Solaris 2.6, 7.0, 8.0. 	
+			Solaris 2.6, 7, 8, 9 	
 		    	</font>
    		      </li>
                     </ul>
