--- a/vtunsite/index.html
+++ b/vtunsite/index.html
@@ -44,6 +44,7 @@
 			<tr>
 			  <td>
 			    <font face="Verdana" color="#000000">
+			      11.12.2006 Released VTun 3.0.0<br/>
 			      04.06.2003 Released VTun 2.6<br/>
 			      01.14.2002 Released VTun 2.5<br/>
 			      08.24.2001 Mailing list moved to SourceForge.Net<br/>
