rfe1730431 - mailing list URL borked

--- a/vtunsite/mlist.html
+++ b/vtunsite/mlist.html
@@ -49,10 +49,9 @@
                       <li>
 			<font face="Verdana" color="#000000">
 			   <a
-			   href="http://sourceforge.net/mailarchive/forum.php?forum=vtun-users">
+			   href="http://sourceforge.net/mailarchive/forum.php?forum_name=vtun-users">
 			   Archives
 			   </a>
-			   (Whenever SF fixes them)
 			</font>
    		      </li>
                     </ul>
@@ -97,9 +96,9 @@
                       <li>
 			<font face="Verdana" color="#000000">
 			   <a
-			   href="http://sourceforge.net/mailarchive/forum.php?forum=vtun-devel">
+			   href="http://sourceforge.net/mailarchive/forum.php?forum_name=vtun-devel">
 			   Archives
-			   </a> (Whenever SF fixes them)
+			   </a>
 			</font>
 		      </li>
 		    </ul>
@@ -126,7 +125,7 @@
 
    <br><br>
    <font face="Verdana"> 
-      Copyright (C) 1999-2003 Maxim Krasnyansky<br>
+      Copyright (C) 1999-2007 Maxim Krasnyansky<br>
    </font>
    <font size=-3><a href="http://sourceforge.net/sendmessage.php?touser=10830">corrections?</a></font>   </center>
 </body>
