bz3050, rfe1602625, rfe780607 - vtun 3.0.1 annunced, vtun 2.4b2 pulled.

--- a/vtunsite/index.html
+++ b/vtunsite/index.html
@@ -44,6 +44,7 @@
 			<tr>
 			  <td>
 			    <font face="Verdana" color="#000000">
+			      06.12.2007 Released VTun 3.0.1<br/>
 			      11.12.2006 Released VTun 3.0.0<br/>
 			      04.06.2003 Released VTun 2.6<br/>
 			      01.14.2002 Released VTun 2.5<br/>
@@ -51,7 +52,6 @@
 			      08.06.2001 Released VTun 2.5b1<br/>
 			      02.03.2001 Universal TUN/TAP driver 1.1 released<br/>
 			      01.23.2001 Released VTun 2.4<br/>
-			      12.27.2000 Released VTun 2.4b2<br/>
 			    </font>
 			  </td>
 			</tr>
@@ -186,7 +186,7 @@
 	height="31" width="88" /></a>
 	<br/><br/> 
 	<font face="Verdana"> 
-	  Copyright (C) 1999-2006 Maxim Krasnyansky<br/>
+	  Copyright (C) 1999-2007 Maxim Krasnyansky<br/>
 	</font>
 	<font size=-3><a href="http://sourceforge.net/sendmessage.php?touser=10830">corrections?</a></font>   
       </center>
