add tun download links.

--- a/vtunsite/download.html
+++ b/vtunsite/download.html
@@ -51,6 +51,8 @@
 			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.0-1.centos4.i386.rpm">Vtun 3.0.0 for CentOS 4</a><br/>
 			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.0-1.rh9.i386.rpm">Vtun 3.0.0 for RedHat 9</a><br/>
 			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.0-1.src.rpm">Vtun 3.0.0 Source RPM</a><br/>
+			  <a href="http://prdownloads.sourceforge.net/vtun/tun-1.1-8.centos4.i386.rpm"></a>Tun helper 1.1 for Centos<br/>
+			  <a href="http://prdownloads.sourceforge.net/vtun/tun-1.1-8.src.rpm"></a>Tun helper 1.1 Source RPM<br/>
 			</dl>
 		      </li>
 		      <br/>
