--- a/vtunsite/download.html
+++ b/vtunsite/download.html
@@ -120,7 +120,7 @@
 	      <tr>
 		<td align="center" valign="top" bgcolor="#446DC4">
 		  <font color="#FFFFFF" face="Verdana">
-		    <b>Development (3.X)</b>
+		    <b>Development</b>
 		  </font>
 		</td>
 	      </tr>
@@ -129,7 +129,9 @@
 		  <font face="Verdana">
 		  <br/><br/><br/><br/>
 
-		    <center>Nothing at this time.</center>
+		    <center>Nothing at this time.  Feel free to check
+		    out the CVS tree and experiment!  Remember to save
+		    the pieces.</center>
 
 		  </font>
 		  <br/><br/><br/><br/>
@@ -155,14 +157,21 @@
 		  <font color="#000000" face="Verdana">
 
 <p>Please, please, try to use the packages offered by the vtun devel
-team.  The devel team and users often don't have the spare time to
-spend trying to re-create a custom environment.  If your OS isn't
-listed, please try a source package, and then the source, before
-trying a 3rd-party package.</p>
-		    
-<p>Yes, you will probably need a tun RPM for these vtun RPMs, and if
-you are packaging a tun-based VPN app, please set a dependency on the
-tun RPM.  Send me (bishop) email if you can't figure out why.</p>
+team.  The devel team and charitable users often don't have the spare
+time to spend trying to re-create a custom environment to debug every
+problem.  If your distro offers you an installation suite, then of
+course use that; they will be well-prepared to help you.  If your OS
+or distro isn't listed, please try a source package, and then the
+source, before trying a 3rd-party non-distro package.  The level of
+support you get can only be better if it's easier to replicate your
+exact setup.</p>
+
+<p>Yes, you will probably need a tun RPM for these vtun RPMs, in many
+cases even if your distro provides the kernel module.  If you are
+packaging a tun-based VPN app, please set a dependency on the tun RPM;
+it can be important for cohabitation with other tun-using products.
+Send me (bishop) email if you don't immediately understand why or you
+wish to discuss it.</p>
 
 		  </font>
 		  <br/><br/><br/><br/>
