--- a/vtunsite/download.html
+++ b/vtunsite/download.html
@@ -1,5 +1,5 @@
 <html>
-
+  <! $Revision !>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
     <meta name="Author" content="Maxim Krasnyansky"/>
@@ -41,16 +41,16 @@
 		      <li>
 			<font face="Verdana" color="#000000">Source</font>
 			<dl>
-			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.0.tar.gz">vtun-3.0.0.tar.gz</a>
+			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.1.tar.gz">vtun-3.0.1.tar.gz</a>
 			</dl>
 		      </li>
 		      <br/>
 		      <li>
 			<font face="Verdana" color="#000000">Linux RPM packages</font>
 			<dl>
-			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.0-1.centos4.i386.rpm">Vtun 3.0.0 for CentOS 4</a><br/>
+			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.1-1.centos4.i386.rpm">Vtun 3.0.1 for CentOS 4</a><br/>
+			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.1-1.src.rpm">Vtun 3.0.1 Source RPM</a><br/>
 			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.0-1.rh9.i386.rpm">Vtun 3.0.0 for RedHat 9</a><br/>
-			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.0-1.src.rpm">Vtun 3.0.0 Source RPM</a><br/>
 			  <a href="http://prdownloads.sourceforge.net/vtun/tun-1.1-8.centos4.i386.rpm">Tun helper 1.1 for Centos</a><br/>
 			  <a href="http://prdownloads.sourceforge.net/vtun/tun-1.1-8.src.rpm">Tun helper 1.1 Source RPM</a><br/>
 			</dl>
@@ -156,22 +156,22 @@
 		<td bgcolor="#E7E7E7">
 		  <font color="#000000" face="Verdana">
 
-<p>Please, please, try to use the packages offered by the vtun devel
-team.  The devel team and charitable users often don't have the spare
-time to spend trying to re-create a custom environment to debug every
-problem.  If your distro offers you an installation suite, then of
-course use that; they will be well-prepared to help you.  If your OS
-or distro isn't listed, please try a source package, and then the
-source, before trying a 3rd-party non-distro package.  The level of
-support you get can only be better if it's easier to replicate your
-exact setup.</p>
+<p>Please, please, try to use the packages offered by the VTun Devel
+Team, or else your distribution.  The devel team and charitable users
+often don't have the spare time to spend trying to re-create a custom
+environment to debug every problem.  If your distro offers you an
+installation suite, then of course use that; they will be
+well-prepared to help you and we will be happy to address issued
+passed on from them.  If your OS or distro isn't listed, please try a
+source package, and then the source, before trying a 3rd-party
+non-distro package.  The level of support you get can only be better
+if it's easier to replicate your exact setup.</p>
 
-<p>Yes, you will probably need a tun RPM for these vtun RPMs, in many
-cases even if your distro provides the kernel module.  If you are
-packaging a tun-based VPN app, please set a dependency on the tun RPM;
-it can be important for cohabitation with other tun-using products.
-Send me (bishop) email if you don't immediately understand why or you
-wish to discuss it.</p>
+<p>Yes, you will probably need a tun RPM for these vtun RPMs, and even
+if your distro provides the kernel module; it can be important for
+cohabitation with other tun-using products.  If you are packaging a
+tun-based VPN app, please set a dependency on the tun RPM; you should
+know why!  Send me (bishop) email if you wish to discuss it.</p>
 
 		  </font>
 		  <br/><br/><br/><br/>
