--- a/vtunsite/download.html
+++ b/vtunsite/download.html
@@ -1,5 +1,5 @@
 <html>
-  <! $Revision !>
+  <! $Revision$ !>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
     <meta name="Author" content="Maxim Krasnyansky"/>
