--- a/vtunsite/download.html
+++ b/vtunsite/download.html
@@ -41,15 +41,16 @@
 		      <li>
 			<font face="Verdana" color="#000000">Source</font>
 			<dl>
-			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.1.tar.gz">vtun-3.0.1.tar.gz</a>
+			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.2.tar.gz">vtun-3.0.2.tar.gz</a>
 			</dl>
 		      </li>
 		      <br/>
 		      <li>
 			<font face="Verdana" color="#000000">Linux RPM packages</font>
 			<dl>
-			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.1-1.centos4.i386.rpm">Vtun 3.0.1 for CentOS 4</a><br/>
-			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.1-1.src.rpm">Vtun 3.0.1 Source RPM</a><br/>
+			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.2-1.centos5.i386.rpm">Vtun 3.0.2 for CentOS 5</a><br/>
+			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.2-1.centos4.i386.rpm">Vtun 3.0.2 for CentOS 4</a><br/>
+			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.2-1.src.rpm">Vtun 3.0.2 Source RPM</a><br/>
 			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.0-1.rh9.i386.rpm">Vtun 3.0.0 for RedHat 9</a><br/>
 			  <a href="http://prdownloads.sourceforge.net/vtun/tun-1.1-8.centos4.i386.rpm">Tun helper 1.1 for Centos</a><br/>
 			  <a href="http://prdownloads.sourceforge.net/vtun/tun-1.1-8.src.rpm">Tun helper 1.1 Source RPM</a><br/>
@@ -161,7 +162,7 @@ Team, or else your distribution.  The devel team and charitable users
 often don't have the spare time to spend trying to re-create a custom
 environment to debug every problem.  If your distro offers you an
 installation suite, then of course use that; they will be
-well-prepared to help you and we will be happy to address issued
+well-prepared to help you and we will be happy to address issues
 passed on from them.  If your OS or distro isn't listed, please try a
 source package, and then the source, before trying a 3rd-party
 non-distro package.  The level of support you get can only be better
@@ -187,7 +188,7 @@ know why!  Send me (bishop) email if you wish to discuss it.</p>
       <img SRC="/cgi-bin/count.cgi?df=vtun_download&ft=1&dd=C&srgb=0;0;0&prgb=0;115;198" alt=""/> 
       <br/><br/>
       <font face="Verdana"> 
-	Copyright (C) 1999-2007 Maxim Krasnyansky<br/>
+	Copyright (C) 1999-2008 Maxim Krasnyansky<br/>
       </font>
       <font size=-3><a href="http://sourceforge.net/sendmessage.php?touser=10830">corrections?</a></font>   
     </center>
