--- a/vtunsite/index.html
+++ b/vtunsite/index.html
@@ -44,6 +44,7 @@
 			<tr>
 			  <td>
 			    <font face="Verdana" color="#000000">
+			      02.08.2008 Released VTun 3.0.2<br/>
 			      06.12.2007 Released VTun 3.0.1<br/>
 			      11.12.2006 Released VTun 3.0.0<br/>
 			      04.06.2003 Released VTun 2.6<br/>
@@ -186,7 +187,7 @@
 	height="31" width="88" /></a>
 	<br/><br/> 
 	<font face="Verdana"> 
-	  Copyright (C) 1999-2007 Maxim Krasnyansky<br/>
+	  Copyright (C) 1999-2008 Maxim Krasnyansky<br/>
 	</font>
 	<font size=-3><a href="http://sourceforge.net/sendmessage.php?touser=10830">corrections?</a></font>   
       </center>
